// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pricing table components Item in table snapshot 1`] = `
<div
  className="panel price panel-orange"
>
  <div
    className="panel-heading arrow_box text-center"
  >
    <h3>
      Caldera Forms Pro Agency
    </h3>
    <strong>
      549.89
    </strong>
    <ul
      className="list-group list-group-flush text-center"
    >
      <li
        className="list-group-item"
      >
        <span>
          feature1
        </span>
      </li>
      <li
        className="list-group-item"
      >
        <span>
          feature 2
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Pricing table components Pricing Tables with 1 products 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-12 col-md-12"
  >
    <div
      className="panel price panel-orange"
    >
      <div
        className="panel-heading arrow_box text-center"
      >
        <h3>
          Caldera Forms Pro Agency
        </h3>
        <strong>
          549.89
        </strong>
        <ul
          className="list-group list-group-flush text-center"
        >
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Form Submissions
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Forms
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes 31 Add-ons
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes Caldera Pro Service
            </span>
          </li>
        </ul>
        <div
          className="panel-footer"
        >
          <a
            className={undefined}
            onClick={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            Buy the only option
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pricing table components Pricing Tables with 3 products 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-12 col-md-4"
  >
    <div
      className="panel price panel-orange"
    >
      <div
        className="panel-heading arrow_box text-center"
      >
        <h3>
          Caldera Forms Pro Agency
        </h3>
        <strong>
          549.89
        </strong>
        <ul
          className="list-group list-group-flush text-center"
        >
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Form Submissions
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Forms
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes 31 Add-ons
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes Caldera Pro Service
            </span>
          </li>
        </ul>
        <div
          className="panel-footer"
        >
          <a
            className={undefined}
            onClick={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            Buy This ONe
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-12 col-md-4"
  >
    <div
      className="panel price panel-orange"
    >
      <div
        className="panel-heading arrow_box text-center"
      >
        <h3>
          Caldera Forms Pro Individual
        </h3>
        <strong>
          164.89
        </strong>
        <ul
          className="list-group list-group-flush text-center"
        >
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Form Submissions
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Forms
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes 10 Add-ons
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes Caldera Pro Service
            </span>
          </li>
        </ul>
        <div
          className="panel-footer"
        >
          <a
            className={undefined}
            onClick={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            Buy This ONe
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-12 col-md-4"
  >
    <div
      className="panel price panel-orange"
    >
      <div
        className="panel-heading arrow_box text-center"
      >
        <h3>
          Caldera Forms Pro Advanced
        </h3>
        <strong>
          274.89
        </strong>
        <ul
          className="list-group list-group-flush text-center"
        >
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Form Submissions
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Unlimited Forms
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes 15 Add-ons
            </span>
          </li>
          <li
            className="list-group-item"
          >
            <span>
              Includes Caldera Pro Service
            </span>
          </li>
        </ul>
        <div
          className="panel-footer"
        >
          <a
            className={undefined}
            onClick={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
          >
            Buy This ONe
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
